--- a/questão5/receberNumero.html
+++ b/questão5/receberNumero.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="verificadordeIdade.js" type="text/javascript" defer></script>
+    <script src="tabeladeMultiplicacao.js" type="text/javascript" defer></script>
 </head>
 <body>
     
